--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   
   <!-- Main CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   
   <!-- Main JavaScript -->
-  <script src="script.js" defer></script>
+  <script src="scripts/script.js" defer></script>
   
   <title>Course Work | Idehen Noma</title>
 </head>
