--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -26,7 +26,7 @@
   <meta property="og:image" content="https://mydomain.com/images/doctorconnect-logo.webp">
   <meta property="og:url" content="https://mydomain.com/directory.html">
   <meta property="og:type" content="website">
-  <script src="scripts/fx-scripts.js"defer></script>
+  <script src="scripts/directory.js"defer></script>
 </head>
 
 <body>
