--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,7 +9,7 @@
   <title>DoctorConnect | Medical Directory</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="images/medical-icon.ico">
+  <link rel="icon" type="image/x-icon" href="images/downtown.webp">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,14 +26,14 @@
   <meta property="og:image" content="https://mydomain.com/images/doctorconnect-logo.webp">
   <meta property="og:url" content="https://mydomain.com/directory.html">
   <meta property="og:type" content="website">
-  <script src="scripts/directory.js"defer></script>
+  <script src="scripts/directory.js" defer></script>
 </head>
 
 <body>
   <header>
     <nav class="nav">
       <a class="logo" href="index.html">
-        <img src="images/doctorconnect-logo.webp" alt="DoctorConnect logo" class="profile-image">
+        <img src="images/downtown.webp" alt="DoctorConnect logo" class="profile-image">
         <span class="site-name">DoctorConnect Directory</span>
       </a>
       <a id="menu" href="#" aria-label="Menu">&#9776;</a>
@@ -57,7 +57,7 @@
 
     <div id="cards" class="grid-view">
       <section>
-        <img src="images/BrightSmile.webp" alt="Dr. Aisha Bello">
+        <img src="images/brightSmile.webp" alt="Dr. Aisha Bello">
         <h3>Dr. Aisha Bello</h3>
         <p>25 Marina Rd, Lagos</p>
         <p>(+234) 701-222-1111</p>
@@ -131,7 +131,7 @@
     <section class="social-media">
       <a href="https://facebook.com/" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
       <a href="https://linkedin.com/" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"></a>
-      <a href="https://youtube.com/" target="_blank"><img src="images/youtube.png" alt="YouTube"></a>
+      <a href="https://youtube.com/" target="_blank"><img src="images/yout.png" alt="YouTube"></a>
     </section>
 
     <section class="course-info">
