--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -66,7 +66,7 @@
       </section>
 
       <section>
-        <img src="images/CityCenter.webp" alt="Dr. John Eze">
+        <img src="images/city.webp" alt="Dr. John Eze">
         <h3>Dr. John Eze</h3>
         <p>15 Unity Ave, Abuja</p>
         <p>(+234) 803-555-9999</p>
