--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -23,8 +23,8 @@
   <!-- Open Graph Meta -->
   <meta property="og:title" content="DoctorConnect | Medical Directory">
   <meta property="og:description" content="Explore the DoctorConnect Directory – connecting verified doctors and clinics across Nigeria.">
-  <meta property="og:image" content="https://mydomain.com/images/doctorconnect-logo.webp">
-  <meta property="og:url" content="https://mydomain.com/directory.html">
+  <meta property="og:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp">
+  <meta property="og:url" content="https://nomajeffery.github.io/wdd231/chamber/directory.html">
   <meta property="og:type" content="website">
   <script src="scripts/directory.js" defer></script>
 </head>
