--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -57,7 +57,7 @@
 
     <div id="cards" class="grid-view">
       <section>
-        <img src="images/brightSmile.webp" alt="Dr. Aisha Bello">
+        <img src="images/brightsmile.webp" alt="Dr. Aisha Bello">
         <h3>Dr. Aisha Bello</h3>
         <p>25 Marina Rd, Lagos</p>
         <p>(+234) 701-222-1111</p>
