--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -129,15 +129,17 @@
     </section>
 
     <section class="social-media">
+          <h3>Follow Us</h3>
       <a href="https://facebook.com/" target="_blank"><img src="images/facebook.png" alt="Facebook"></a>
       <a href="https://linkedin.com/" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"></a>
       <a href="https://youtube.com/" target="_blank"><img src="images/yout.png" alt="YouTube"></a>
     </section>
 
     <section class="course-info">
+       <h3>Project Details</h3>
       <p>WDD 231 Class Project | Idehen Noma</p>
       <p>Last Modification: <span class="modification"></span></p>
     </section>
   </footer>
-</body>s
+</body>
 </html>
