--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -26,7 +26,7 @@
   <meta property="og:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp">
   <meta property="og:url" content="https://nomajeffery.github.io/wdd231/chamber/directory.html">
   <meta property="og:type" content="website">
-  <script src="scripts/directory.js" defer></script>
+  <script src="scripts/doctorscripts.js" defer></script>
 </head>
 
 <body>
