--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,6 +12,12 @@
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="images/downtown.webp">
 
+   <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+
    <!-- Open Graph Meta -->
   <meta property="og:title" content="DoctorConnect | Medical Directory">
   <meta property="og:description" content="Explore the DoctorConnect Directory – connecting verified doctors and clinics across Nigeria.">
@@ -42,7 +48,7 @@
 
     <!--HERO SECTION -->
     <section class="hero-static">
-      <img src="images/kids-vaccine20000gettyimages-1292159123.webp" alt="Doctor Consulting Patient">
+      <img src="images/full.webp" alt="Doctor Consulting Patient">
       <div class="overlay">
         <h2>Your Health, Our Priority</h2>
         <p>Providing compassionate care for you and your family.</p>
@@ -80,12 +86,12 @@
       <h2>Our Doctors</h2>
       <div class="spotlight-grid">
         <article>
-          <img src="images/pexels-photo-5452255.webp" alt="Dr. Smith">
+          <img src="images/photo-54.webp" alt="Dr. Smith">
           <h3>Dr. Alice Smith</h3>
           <p>Cardiologist with 15 years of experience in heart care and preventive medicine.</p>
         </article>
         <article>
-          <img src="images/istockphoto-1312170263-612x612.webp" alt="Dr. John Doe">
+          <img src="images/main1.webp" alt="Dr. John Doe">
           <h3>Dr. John Doe</h3>
           <p>General Physician specializing in family medicine and wellness programs.</p>
         </article>
