--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,6 +7,7 @@
    <meta name="author" content="Idehen Noma">
   <title>Dr. HealthChamber</title>
   <link rel="stylesheet" href="styles/doctor.css">
+  <link rel="stylesheet" href="styles/doc">
   <script defer src="scripts/doctor.js"></script>
 
   <!-- Favicon -->
@@ -86,7 +87,7 @@
       <h2>Our Doctors</h2>
       <div class="spotlight-grid">
         <article>
-          <img src="images/photo-54.webp" alt="Dr. Smith">
+          <img src="images/photodoc.webp" alt="Dr. Smith">
           <h3>Dr. Alice Smith</h3>
           <p>Cardiologist with 15 years of experience in heart care and preventive medicine.</p>
         </article>
