--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,6 +7,13 @@
   <meta name="author" content="Idehen Noma">
   <title>Dr. HealthChamber</title>
 
+  <!-- Open Graph Meta -->
+  <meta property="og:title" content="DoctorConnect | Medical Directory">
+  <meta property="og:description" content="Explore the DoctorConnect Directory – connecting verified doctors and clinics across Nigeria.">
+  <meta property="og:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp">
+  <meta property="og:url" content="https://nomajeffery.github.io/wdd231/chamber/directory.html">
+  <meta property="og:type" content="website">
+
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/doc.css">
 
@@ -17,8 +24,11 @@
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="images/downtown.webp">
 
-  <!-- Fonts -->
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
 
 </head>
 
