--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,8 +18,8 @@
   <link rel="stylesheet" href="styles/doc.css">
 
   <script defer src="scripts/doctor.js"></script>
-  <script defer src="scripts/weather.js"></script>
-  <script defer src="scripts/spotlight.js"></script>
+ <!--<script defer src="scripts/weather.js"></script>-->
+  <!--<script defer src="scripts/spotlight.js"></script>-->
 
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="images/downtown.webp">
@@ -28,8 +28,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-
-
 </head>
 
 <body>
