--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,7 +55,7 @@
 
   <!-- HERO SECTION -->
   <section class="hero-static">
-    <img src="images/full.webp" alt="Doctor Consulting Patient" width="1900" height="900">
+    <img src="images/patienty.webp" alt="Doctor Consulting Patient" width="1900" height="900">
     <div class="overlay">
       <h2>Your Health, Our Priority</h2>
       <p>Providing compassionate care for you and your family.</p>
