--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,11 +12,10 @@
         <meta property="og:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp"> 
         <meta property="og:url" content="https://nomajeffery.github.io/wdd231/chamber/directory.html"> 
         <meta property="og:type" content="website"> 
-        <link rel="stylesheet" href="cs.css"> 
-        <link rel="stylesheet" href="styles/doc.css"> 
+        <link rel="stylesheet" href="styles/look.css"> 
+        <link rel="stylesheet" href="styles/doctor.css"> 
         <script defer src="scripts/doctor.js"></script>         
-        <!--<script defer src="scripts/weather.js"></script>-->         
-        <!--<script defer src="scripts/spotlight.js"></script>-->         
+                 
         <!-- Favicon -->         
         <link rel="icon" type="image/x-icon" href="images/downtown.webp"> 
         <!-- Google Fonts -->         
