--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,30 +24,30 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"> 
     </head>     
     <body> 
-        <header> 
-            <div class="header-container"> 
-                <img src="images/downtown.webp" alt="Dr. HealthChamber Logo" class="logo" width="60" height="60"> 
-                <h1>Dr. HealthChamber</h1> 
-                <!-- Accessible Menu Button -->                 
-                <button id="menu-btn" aria-label="Menu" aria-expanded="false">☰</button>                 
-                <nav id="main-nav"> 
-                    <ul class="nav-links"> 
-                        <li>
-                            <a href="index.html" class="active">Home</a>
-                        </li>                         
-                        <li>
-                            <a href="directory.html">Directory</a>
-                        </li>                         
-                        <li>
-                            <a href="join.html">Join</a>
-                        </li>                         
-                        <li>
-                            <a href="contact.html">Contact</a>
-                        </li>                         
-                    </ul>                     
-                </nav>                 
-            </div>             
-        </header>         
+       <header>
+  <div class="header-container">
+
+    <div class="header-left">
+      <img src="images/downtown.webp" alt="Logo" class="logo">
+      <h1>  Dr.HealthChamber</h1>
+    </div>
+
+    <!-- Menu button on the right -->
+    <button id="menu-btn">☰</button>
+
+  </div>
+
+  <!-- Navigation stays the same -->
+  <nav id="main-nav">
+    <ul class="nav-links">
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="directory.html">Directory</a></li>
+      <li><a href="join.html">Join</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    
+    </ul>
+  </nav>
+</header>
         <main> 
             <!-- HERO SECTION -->             
             <section class="hero-static"> 
