--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,7 +28,7 @@
   <div class="header-container">
 
     <div class="header-left">
-      <img src="images/downtown.webp" alt="Logo" class="logo">
+      <img src="images/downtown.webp" alt="doctors logo" class="logo">
       <h1>  Dr.HealthChamber</h1>
     </div>
 
