--- a/chamber/join.html
+++ b/chamber/join.html
@@ -28,7 +28,7 @@
 
     <!-- JS -->
     <script defer src="scripts/menu.js"></script>
-    <script defer src="scripts/menu.js"></script>
+    <script defer src="scripts/join.js"></script>
 </head>
 <body>
 
