--- a/chamber/join.html
+++ b/chamber/join.html
@@ -35,7 +35,7 @@
 <header>
     <div class="header-container">
         <div class="header-left">
-            <img src="images/logo.png" alt="HealthChamber Logo" class="logo">
+            <img src="images/downtown.webp" alt="HealthChamber Logo" class="logo">
             <h1>Dr. HealthChamber</h1>
         </div>
 
