--- a/chamber/join.html
+++ b/chamber/join.html
@@ -23,7 +23,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 
     <!-- CSS Files -->
-    <link rel="stylesheet" href="styles/newway.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/doctor-color.css">
     <link rel="stylesheet" href="styles/join.css">
 
     <!-- JS -->
@@ -33,93 +34,79 @@
 <body>
 
 <header>
-    <div class="header-container">
-        <div class="header-left">
-            <img src="images/downtown.webp" alt="HealthChamber Logo" class="logo">
-            <h1>Dr. HealthChamber</h1>
+    <div class="nav">
+        <div class="logo">
+            <img src="images/logo.webp" alt="HealthChamber Logo" />
+            <span>Dr. HealthChamber</span>
         </div>
 
-        <button id="menu-btn" aria-expanded="false">☰</button>
+        <button id="menu-btn" aria-expanded="false" aria-controls="main-nav">☰</button>
 
-        <nav id="main-nav">
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="join.html" class="active">Join</a></li>
-                <li><a href="members.html">Members</a></li>
+        <nav id="main-nav" class="main-nav" aria-label="Primary Navigation">
+            <ul class="list nav-links">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="join.html" class="active" aria-current="page">Join</a></li>
+                <li><a href="directory.html">Directory</a></li>
             </ul>
         </nav>
 
-        <button id="dark-toggle" title="Toggle dark mode">🌙 Dark Mode</button>
+        <button id="dark-toggle" title="Toggle dark mode">🌙</button>
     </div>
 </header>
 
 <main class="container" role="main">
     <form id="join-form" action="thankyou.html" method="get">
-        <h2>Join the Chamber</h2>
-
-        <label>
+        <h1>Join the Chamber</h1>
+        <label for="firstName">
             First Name:
-            <input type="text" name="firstName" autocomplete="given-name" title="Enter your first name" required>
         </label>
+        <input id="firstName" type="text" name="firstName" autocomplete="given-name" title="Enter your first name" required>
 
-        <label>
-            Last Name:
-            <input type="text" name="lastName" autocomplete="family-name" title="Enter your last name" required>
-        </label>
+        <label for="lastName">Last Name:</label>
+        <input id="lastName" type="text" name="lastName" autocomplete="family-name" title="Enter your last name" required>
 
-        <label>
-            Organizational Title:
-            <input type="text" name="orgTitle" autocomplete="organization-title" title="Enter your title (e.g., Manager)">
-        </label>
+        <label for="orgTitle">Organizational Title:</label>
+        <input id="orgTitle" type="text" name="title" autocomplete="organization-title" title="Enter your title (letters, spaces, and hyphens; min 7 chars)" pattern="^[A-Za-z\s-]{7,}$" placeholder="e.g., Clinical Director">
 
-        <label>
-            Email Address:
-            <input type="email" name="email" autocomplete="email" title="Enter a valid email (e.g., name@example.com)" required>
-        </label>
+        <label for="email">Email Address:</label>
+        <input id="email" type="email" name="email" autocomplete="email" title="Enter a valid email (e.g., name@example.com)" placeholder="name@example.com" required>
 
-        <label>
-            Mobile Phone:
-            <input type="tel" name="phone" autocomplete="tel" title="Enter your phone number with country code" required placeholder="+234 000 0000">
-        </label>
+        <label for="phone">Mobile Phone:</label>
+        <input id="phone" type="tel" name="phone" autocomplete="tel" title="Enter your phone number with country code" required placeholder="+234 000 0000">
 
-        <label>
-            Business/Organization Name:
-            <input type="text" name="businessName" autocomplete="organization" title="Enter your organization name" required>
-        </label>
+        <label for="businessName">Business/Organization Name:</label>
+        <input id="businessName" type="text" name="businessName" autocomplete="organization" title="Enter your organization name" required>
 
-        <label>
-            Membership Level:
-            <select name="membershipLevel" id="membershipLevel" title="Select your membership level" required>
+        <label for="membershipLevel">Membership Level:</label>
+        <select name="membershipLevel" id="membershipLevel" title="Select your membership level" required>
                 <option value="">Select level</option>
                 <option value="np">NP Membership (No Fee)</option>
                 <option value="bronze">Bronze Membership</option>
                 <option value="silver">Silver Membership</option>
                 <option value="gold">Gold Membership</option>
             </select>
-        </label>
+        <p id="membership-price" aria-live="polite">Price: ₦0</p>
 
-        <label>
-            Business Description:
-            <textarea name="description" title="Provide a short description of your organization" rows="4"></textarea>
-        </label>
+        <label for="description">Business Description:</label>
+        <textarea id="description" name="description" title="Provide a short description of your organization" rows="4" autocomplete="off"></textarea>
 
         <input type="hidden" name="timestamp" id="timestamp">
-        <input type="submit" value="Submit Application">
+        <button type="submit" class="submit-btn">Submit Application</button>
     </form>
 
     <div class="membership-cards">
-        <div class="card" data-modal="modal-np">NP Membership <a href="#">Learn More</a></div>
-        <div class="card" data-modal="modal-bronze">Bronze Membership <a href="#">Learn More</a></div>
-        <div class="card" data-modal="modal-silver">Silver Membership <a href="#">Learn More</a></div>
-        <div class="card" data-modal="modal-gold">Gold Membership <a href="#">Learn More</a></div>
+        <div class="card" data-modal="modal-np" role="button" aria-controls="modal-np" aria-expanded="false" tabindex="0">NP Membership <button class="learn-more" type="button" aria-controls="modal-np">Learn More</button></div>
+        <div class="card" data-modal="modal-bronze" role="button" aria-controls="modal-bronze" aria-expanded="false" tabindex="0">Bronze Membership <button class="learn-more" type="button" aria-controls="modal-bronze">Learn More</button></div>
+        <div class="card" data-modal="modal-silver" role="button" aria-controls="modal-silver" aria-expanded="false" tabindex="0">Silver Membership <button class="learn-more" type="button" aria-controls="modal-silver">Learn More</button></div>
+        <div class="card" data-modal="modal-gold" role="button" aria-controls="modal-gold" aria-expanded="false" tabindex="0">Gold Membership <button class="learn-more" type="button" aria-controls="modal-gold">Learn More</button></div>
     </div>
 </main>
 
 <!-- Modal Templates -->
-<div id="modal-np" class="modal">
+<div id="modal-np" class="modal" role="dialog" aria-labelledby="modal-np-title" aria-modal="true" aria-hidden="true">
     <div class="modal-content">
-        <span class="close">&times;</span>
-        <h3>NP Membership Benefits</h3>
+        <button type="button" class="close" aria-label="Close modal">&times;</button>
+        <h3 id="modal-np-title">NP Membership Benefits</h3>
         <ul>
             <li>No Fee</li>
             <li>Access to chamber events</li>
@@ -127,10 +114,10 @@
         </ul>
     </div>
 </div>
-<div id="modal-bronze" class="modal">
+<div id="modal-bronze" class="modal" role="dialog" aria-labelledby="modal-bronze-title" aria-modal="true" aria-hidden="true">
     <div class="modal-content">
-        <span class="close">&times;</span>
-        <h3>Bronze Membership Benefits</h3>
+        <button type="button" class="close" aria-label="Close modal">&times;</button>
+        <h3 id="modal-bronze-title">Bronze Membership Benefits</h3>
         <ul>
             <li>Spotlight on website</li>
             <li>Event discounts</li>
@@ -138,10 +125,10 @@
         </ul>
     </div>
 </div>
-<div id="modal-silver" class="modal">
+<div id="modal-silver" class="modal" role="dialog" aria-labelledby="modal-silver-title" aria-modal="true" aria-hidden="true">
     <div class="modal-content">
-        <span class="close">&times;</span>
-        <h3>Silver Membership Benefits</h3>
+        <button type="button" class="close" aria-label="Close modal">&times;</button>
+        <h3 id="modal-silver-title">Silver Membership Benefits</h3>
         <ul>
             <li>Everything in Bronze</li>
             <li>Advertising in newsletter</li>
@@ -149,10 +136,10 @@
         </ul>
     </div>
 </div>
-<div id="modal-gold" class="modal">
+<div id="modal-gold" class="modal" role="dialog" aria-labelledby="modal-gold-title" aria-modal="true" aria-hidden="true">
     <div class="modal-content">
-        <span class="close">&times;</span>
-        <h3>Gold Membership Benefits</h3>
+        <button type="button" class="close" aria-label="Close modal">&times;</button>
+        <h3 id="modal-gold-title">Gold Membership Benefits</h3>
         <ul>
             <li>Everything in Silver</li>
             <li>Spotlight on homepage</li>
