--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="https://www/" title="Visit Chamber project">Chamber</a></li>
         <li><a href="https://github.com/" title="Visit GitHub profile">GitHub</a></li>
         <li><a href="https://linkedin.com/" title="Visit LinkedIn profile">LinkedIn</a></li>
+        <li><a href="siteplan.html" title="Site Plan">Site Plan</a></li>
       </ul>
     </nav>
   </header>
