--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <button class="hamburger" id="hamburger" aria-label="Toggle menu">☰</button>
       <ul class="menu" id="menu">
         <li><a href="#" class="active" title="Home">Home</a></li>
-        <li><a href="https://www/" title="Visit Chamber project">Chamber</a></li>
+        <li><a href="chamber/index.html" title="Visit Chamber project">Chamber</a></li>
         <li><a href="https://github.com/" title="Visit GitHub profile">GitHub</a></li>
         <li><a href="https://linkedin.com/" title="Visit LinkedIn profile">LinkedIn</a></li>
         <li><a href="siteplan.html" title="Site Plan">Site Plan</a></li>
