--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -45,7 +45,7 @@
     <p>&copy; <span id="year"></span> Chamber of Doctor</p>
   </footer>
 
-  <script defer src="scripts/menu.js"></script>
+  <script defer src="scripts/nav.js"></script>
   <script defer src="scripts/thankyou.js"></script>
 </body>
 </html>
