--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href="https://github.com/" title="Visit GitHub profile">GitHub</a></li>
         <li><a href="https://linkedin.com/" title="Visit LinkedIn profile">LinkedIn</a></li>
         <li><a href="siteplan.html" title="Site Plan">Site Plan</a></li>
+         <li><a href="final/index.html" title="Final Project">Final Project</a></li>
       </ul>
     </nav>
   </header>
