--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -5,6 +5,12 @@
   <title>Chamber Discover Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Discover local businesses, doctors, and events in the Health Chamber.">
+   <!-- Open Graph -->
+    <meta property="og:title" content="Join Dr. HealthChamber – Chamber of Commerce Membership">
+    <meta property="og:description" content="Become a member to access business growth resources, networking, and exclusive benefits tailored for doctors.">
+    <meta property="og:image" content="https://nomajeffery.github.io/wdd231/chamber/images/city.webp">
+    <meta property="og:url" content="https://nomajeffery.github.io/wdd231/chamber/join.html">
+    <meta property="og:type" content="website">
   <link rel="stylesheet" href="styles/discover.css">
 </head>
 <body>
