--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -44,7 +44,7 @@
     <section class="cards-grid">
       <!-- Example card -->
       <article class="card">
-        <img src="images/main1.webp" alt="Dr. Chioma Nwosu" loading="lazy">
+        <img src="images/main1.webp" alt="Dr.  Nwosu" loading="lazy">
         <div class="card-body">
           <h2>Dr. Chioma Nwosu</h2>
           <p>Gynecologist — 8 Wellness St, Port Harcourt</p>
