--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -5,6 +5,7 @@
   <title>Chamber Discover Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Discover local businesses, doctors, and events in the Health Chamber.">
+  <meta name="author" content="Idehen Noma">
    <!-- Open Graph -->
     <meta property="og:title" content="Join Dr. HealthChamber – Chamber of Commerce Membership">
     <meta property="og:description" content="Become a member to access business growth resources, networking, and exclusive benefits tailored for doctors.">
@@ -16,6 +17,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+
+            <!-- Favicon -->         
+        <link rel="icon" type="image/x-icon" href="images/downtown.webp"> 
 
     <!-- CSS Files -->
   <link rel="stylesheet" href="styles/discover.css">
