--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -23,12 +23,16 @@
 
     <!-- CSS Files -->
   <link rel="stylesheet" href="styles/discover.css">
+   <link rel="stylesheet" href="styles/look.css">
+
+  <script defer src="scripts/nav.js"></script>
+  <script src="scripts/discover.js" type="module"></script>
 </head>
 <body>
   <header>
-    <nav id="main-nav" class="navbar" aria-label="Primary Navigation">
-      <a href="index.html" class="navbar-brand">Dr. HealthChamber</a>
-      <button id="menu-btn" type="button" class="navbar-toggler" aria-controls="main-nav" aria-label="Toggle navigation" aria-expanded="false">☰</button>
+    <nav id="main-nav" class="site-navbar" aria-label="Primary Navigation">
+      <a href="index.html" class="site-brand">Dr. HealthChamber</a>
+      <button id="menu-btn" type="button" class="site-toggler" aria-controls="main-nav" aria-label="Toggle navigation" aria-expanded="false">☰</button>
       <ul class="list nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="directory.html">Directory</a></li>
@@ -65,7 +69,6 @@
     <p>&copy; 2025 Dr. HealthChamber</p>
   </footer>
 
-  <script defer src="scripts/nav.js"></script>
-  <script src="scripts/discover.js" type="module"></script>
+
 </body>
 </html>
