--- a/chamber/join.html
+++ b/chamber/join.html
@@ -40,7 +40,7 @@
             <span>Dr. HealthChamber</span>
         </div>
 
-        <button id="menu-btn" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="main-nav">☰</button>
+        <button id="menu-btn" type="button" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="main-nav">☰</button>
 
         <nav id="main-nav" class="main-nav" aria-label="Primary Navigation">
             <ul class="list nav-links">
@@ -54,7 +54,7 @@
     </div>
 </header>
 
-<main class="container">
+<main class="site-container">
     <form id="join-form" action="thankyou.html" method="get">
         <h1>Join the Chamber</h1>
         <label for="firstName">
